# api_whatsapp

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: GUIA_DE_USO.md
examples/: send_text.py  send_text_async.py
src/whatsapp_cloud_api/: __init__.py  client.py  exceptions.py  models.py  webhook.py
tests/: test_async_client.py  test_client.py  test_webhook.py
